--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,42 @@
-.simple-label{
+.simple-label {
     background-color: transparent;
     border-bottom: #cacaca 1px solid;
-    border-top:none;
-    border-left:none;
-    border-right:none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     margin-bottom: 1px;
+}
+
+.modal.multiple-modal {
+    background: rgba(0, 0, 0, 0.2);
+    filter: Alpha(opacity=20);
+}
+
+
+.multiple-content {
+    filter: alpha(opacity=10);
+    -moz-opacity: 1;
+    -khtml-opacity: 1;
+    opacity: 1;
+    top: auto;
+}
+
+
+.line{
+    display: block;
+    background: red;
+    height: 2px;
+    width: 100%;
+    transition: margin-left 0.6s;
+    -webkit-transition: margin-left 0.6s;
+    -o-transition: margin-left 0.6s;
+    -moz-transition: margin-left 0.6s ;
+}
+
+.line-1{
+    /*margin-left: 0%;*/
+}
+
+.line-2{
+    margin-left: 50%;
 }
