--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,43 @@
     right: 10px;
     color: silver;
 }
+
+.query-select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    /*position: absolute;*/
+    margin-top: 10px;
+    bottom: 0;
+    right: 0;
+    /*padding: 0 48px 0 16px;*/
+    width: 23%;
+    border: none;
+    background: #fff;
+    color: #333;
+    text-indent: .01px;
+    text-overflow: '';
+    white-space: nowrap;
+    font-size: 14px;
+    cursor: pointer;
+    direction: rtl;
+}
+
+.query-select-div{
+    display: inline;
+    width: 25%;
+}
+.query-select-div:after {
+    position: absolute;
+    /*top: 50%;*/
+    /*right: 16px;*/
+    margin-top: 20px;
+    width: 0;
+    height: 0;
+    border-top: 5px solid;
+    border-right: 5px solid transparent;
+    border-left: 5px solid transparent;
+    color: #999;
+    content: "";
+    pointer-events: none;
+}
