--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,16 @@
     border: none;
 }
 
+div li.border-horizontal-clear{
+    border-left:0;
+    border-right:0;
+}
+
+div.div-clear{
+    padding: 0px;
+    margin: 0px;
+}
+
 .button.multiple-select{
     min-height: 0px;
     line-height: 34px;
@@ -107,7 +117,7 @@
     position: absolute;
     /*top: 50%;*/
     /*right: 16px;*/
-    margin-top: 20px;
+    margin-top: 17px;
     width: 0;
     height: 0;
     border-top: 5px solid;
